<resources>
    <string name="app_name">Hotel</string>
    <string name="name_username">Name (Username)</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="theme">Change Theme</string>
    <string name="color">Change Text Color</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="eula">By clicking register, you agree\nto our policy and EULA</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to Hotel App</string>
    <string name="app">Hotel App</string>
    <string name="choose">Choose Your Dream Hotel</string>
    <string name="login">Login</string>
    <string name="required">Required Field</string>
    <string name="invalid_user">Invalid username</string>
    <string name="invalid_pass">Invalid password</string>
    <string name="space">No spaces allowed</string>
    <string name="long_">Long Field</string>
    <string name="exist">User Already Exist</string>
    <string name="invalid_email">Invalid E-Mail</string>
    <string name="pass_match">Passwords don\'t match</string>
    <string name="invalid_pass_req">Invalid Password, Must contain a letter,number and at least 6 characters</string>
    <string name="complete">Registration Complete</string>
    <string name="thanks">Thanks for registering!</string>
    <string name="thanks1">Thanks for registering, please take a tour and discover many low priced and convenient hotels at the palm of your hand.</string>
    <string name="exit">Confirm Exit</string>
    <string name="exit1">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletedial">Confirm Delete</string>
    <string name="deletedial1">This cannot be undone!</string>
    <string name="delete_app">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="stars">stars</string>
    <string name="JD">JD</string>
    <string name="end">Thank you for visiting!</string>
    <string name="creserve">Cancel Reservation</string>
    <string name="startend">days left in your account </string>
    <string name="start_end">Your stay will start in</string>
    <string name="endstart">Your stay will end in</string>
    <string name="max">Maximum Days Reached</string>
    <string name="maxc">Hotel is at maximum capacity, please try again later.</string>
    <string name="wrong">Wrong Date Selected</string>
    <string name="approved">Reservation Successful</string>
    <string name="book">Book</string>
    <string name="num">Card Number</string>
    <string name="day">Days Of Stay</string>
    <string name="offer">"Offer:\t\t\t\t\t\t\t\tPayment Method:</string>
    <string name="deluxe">Deluxe</string>
    <string name="standard">Standard</string>
    <string name="economical">Economicaly</string>
    <string name="ok">Ok</string>
    <string name="understand">I understand</string>
    <string name="warn">You will be refunded if and only if you have cancelled before the check-in day, otherwise your refund will be reducted based on the days you have checked in.</string>
    <string name="warn2">This cannot be undone!</string>
    <string name="gray">Dark Gray</string>
    <string name="white">White</string>
    <string name="black">Black (useful for AMOLED screens)</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="lgreen">Light Green</string>
    <string name="restart">Confirm Restart</string>
    <string name="restart1"> Changing color requires the app to restart</string>
    <string name="fill">Empty Fields</string>
    <string name="fill1">Please fill all fields</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">Register</string>
    <string name="action_settings" translatable="false">Settings</string>
</resources>
