<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center_horizontal">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF0040FF"
        app:counterTextAppearance="@style/CounterStyle"
        android:id="@+id/cardNumber">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/num"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/cardNumberc"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF0040FF"
        app:counterTextAppearance="@style/CounterStyle"
        android:id="@+id/daysofstay">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/day"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/daysofstayc"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/typecard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/offer"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:id="@+id/span"
        >

        <RadioButton
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deluxe" />

        <RadioButton
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standard"/>

        <RadioButton
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/economical" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="visa card" />

        <RadioButton
            android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="payPal" />

        <RadioButton
            android:id="@+id/master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="master card" />
    </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/ok"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>