<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Register"
    android:gravity="center_horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:textColorHint="#FF0040FF"
        app:counterTextAppearance="@style/CounterStyle"
        android:id="@+id/editText1">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/name_username"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/editText12"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:textColorHint="#FF0040FF"
        android:id="@+id/editText2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:paddingTop="35dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
     </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:textColorHint="#FF0040FF"
        app:counterTextAppearance="@style/CounterStyle"
        app:passwordToggleEnabled="true"
        android:id="@+id/editText3"
        android:nextFocusDown="@+id/editText4"
        app:passwordToggleTint="@android:color/holo_blue_dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:drawablePadding="-48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingTop="35dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:textColorHint="#FF0040FF"
        app:counterTextAppearance="@style/CounterStyle"
        app:passwordToggleEnabled="true"
        android:id="@+id/editText4"
        app:passwordToggleTint="@android:color/holo_blue_dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:drawablePadding="-48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingTop="35dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:buttonTint="#808080"
        android:text="@string/eula"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary" />

</LinearLayout>
</ScrollView>