<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="15dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f1"
        android:textColorHint="#FF0040FF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/name_username"
            android:inputType="textPersonName"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f2"
        android:layout_marginBottom="50dp"
        android:textColorHint="#FF0040FF"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_blue_dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="35dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary" />
</LinearLayout>
</ScrollView>
